--- a/index.html
+++ b/index.html
@@ -157,9 +157,52 @@
             I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning vision neuroscience, mathematical biology, genome sciences, protein design, artificial intelligence, computational psychiatry and human-computer interaction. I also maintain close industrial collaborations with IBM Research and Microsoft Research.  </p>
 
           <p class="mb-5 text-primary">
-            More details to come~ <a href="#p1">[1]<a>
+            <table align="left">
+              <tr><th>Start</th><th>End</th><th>Institute</th><th>Team</th><th>Publication</th></tr>
+              <tr><td>2017</td><td>Present</td><td>IBM Research</td><td>Computational Psychiatry Group & AI Foundation Group</td><td><a href="#p7">[7]<a><a href="#p8">[8]<a><a href="#p10">[10]<a></td></tr>
+              <tr><td>2017</td><td>2017</td><td>Microsoft Research</td><td>EPIC (Extended Perception, Interaction, & Cognition) Group</td><td><a href="#p14">[14]<a></td></tr>
+              <tr><td>2018</td><td>Present</td><td>Columbia University</td><td> Visual Inference & Computational Neuroscience Group, Kriegeskorte Lab </td><td><a href="#p9">[9]<a></td></tr>
+              <tr><td>2018</td><td>Present</td><td> </td><td> Center for Theoretical Neuroscience, Qian Lab </td><td><a href="#p11">[11]<a></td></tr>
+              <tr><td>2018</td><td>2018</td><td> </td><td> Center for Topology of Cancer Evolution and Heterogeneity, Rabadan Lab </td><td><a href="#p15">[15]<a></td></tr>
+              <tr><td>2017</td><td>2017</td><td> </td><td> Computational Biology Group of CS, Pe’er Lab </td><td><a href="#p6">[6]<a></td></tr>
+              <tr><td>2017</td><td>2017</td><td>University of Washington</td><td> UbiComp Lab of CSE and EE, Patel Lab </td><td></td></tr>
+              <tr><td>2015</td><td>2017</td><td></td><td> Institute for Protein Design of BioE, Baker Group </td><td><a href="#p12">[12]<a></td></tr>
+              <tr><td>2016</td><td>2016</td><td></td><td> Mathematical Biology and Biophysical Chemistry Lab of AMath, Qian Lab </td><td></td></tr>
+              <tr><td>2014</td><td>2016</td><td></td><td> Vision Neuroscience Lab of Psych, Olavarria Lab </td><td><a href="#p2">[2]<a><a href="#p13">[13]<a></td></tr>
+              <tr><td>2014</td><td>2017</td><td>Beijing Institute of Microbiology & Epidemiology </td><td> State Key Lab of Pathogen and Biosecurity, Teng Lab 􏰆􏰏􏰐􏰏</td><td><a href="#p1">[1]<a><a href="#p3">[3]<a><a href="#p4">[4]<a><a href="#p5">[5]<a></td></tr>
+              <tr><td>2013</td><td>2013</td><td>BGI Research </td><td> Personalized Genome Group, Human Health Application Lab  </td><td></td></tr>
+            </table>
           </p>
 
+          <p class="mb-5 text-primary">
+            More details to come~ 
+          </p>
+<!-- 
+         <div class="resume-item d-flex flex-column flex-md-row mb-5">
+
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0"> IBM Research </h3>
+              <div class="subheading mb-3">Computational Psychiatry Group and AI Foundations Group</div>
+              <p>ongoing.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Sep 2017 - Present</span>
+            </div>
+          </div>
+
+                   <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0"> PhD Research Intern </h3>
+              <div class="subheading mb-3">IBM Research, Yorktown Heights, NY</div>
+              <p>ongoing.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Sep 2017 - Present</span>
+            </div>
+          </div> 
+
+        </div>
+-->
 <!--
           <ul class="list-inline list-icons">
             <li class="list-inline-item">
@@ -209,31 +252,6 @@
           </ul>
  -->
 
-         <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0"> PhD student </h3>
-              <div class="subheading mb-3">Columbia University, New York, NY</div>
-              <p>ongoing.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">Sep 2017 - Present</span>
-            </div>
-          </div>
-
-                   <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0"> PhD Research Intern </h3>
-              <div class="subheading mb-3">IBM Research, Yorktown Heights, NY</div>
-              <p>ongoing.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">Sep 2017 - Present</span>
-            </div>
-          </div>
-
-        </div>
-
       </section>
 
  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="publications">
@@ -241,58 +259,78 @@
           <h2 class="mb-5">Publications</h2>
           <ul class="fa-ul mb-0">
 
+             <li>
+              <i class="fa-li fa fa-journal"></i>
+              [15] &nbsp;  <b class="text-primary" id="p15"> under review. &nbsp; </b> <br />
+               <b> Baihan Lin </b>. <u><i> <a href="">Cliques of single-cell RNA-seq profiles reveal insights into cell ecology during development and differentiation. </a> </u></i> </li></li><br />
+
+            <li>
+              <i class="fa-li fa fa-journal"></i>
+              [14] &nbsp;  <b class="text-primary" id="p14"> under review. &nbsp; </b> <br />
+               Mar Gonzalez-Franco, <b> Baihan Lin </b>, Christopher Berger, and Jaron Lanier. <u><i> <a href="">Enhanced arm reach after a Pinocchio illusion in Virtual Reality. </a> </u></i> </li></li><br />
+
+             <li>
+              <i class="fa-li fa fa-journal"></i>
+              [13] &nbsp;  <b class="text-primary" id="p13"> under review. &nbsp; </b> <br />
+               Adrian Andelin, Zane Doyle, Robyn Laing, Joseph Turecek, <b> Baihan Lin </b>, and Jaime Olavarria. <u><i> <a href="">Lack of ocular dominance columns in albino rats increases the size of the binocular region in striate cortex. </a> </u></i> </li></li><br />
+
+             <li>
+              <i class="fa-li fa fa-journal"></i>
+              [12] &nbsp;  <b class="text-primary" id="p12"> under review. &nbsp; </b> <br />
+               Zibo Chen, Matthew Johnson, Jiajun Chen, Matthew Bick, Scott Boyken, <b> Baihan Lin </b>, James DeYoreo, Justin Kollman, David Baker, and Frank DiMaio. <u><i> <a href="">Self-assembling 2d arrays with de novo protein building blocks. </a> </u></i> </li></li><br />
+
             <li>
               <i class="fa-li fa fa-conference"></i>
-              <b class="text-primary" id="p11"> [11] arXiv 2019. &nbsp; </b><br />
+              [11]&nbsp; <b class="text-primary" id="p11"> 2019 arXiv. &nbsp; </b><br />
               <b> Baihan Lin </b>. <u><i> <a href="https://arxiv.org/abs/1902.10658">Regularity Normalization: Constraining Implicit Space with Minimum Description Length. </a> </u></i> </li><br />
 
             <li>
               <i class="fa-li fa fa-conference"></i>
-              <b class="text-primary" id="p10"> [10] IJCAI 2019. &nbsp; </b><br />
+              [10]&nbsp; <b class="text-primary" id="p10"> 2019 IJCAI. &nbsp; </b><br />
               <b> Baihan Lin </b>, Djallel Bouneffouf, Guillermo Cecchi. <u><i> <a href=""> Split Q Learning: Reinforcement Learning with Two-Stream Rewards. </a> </u></i> </li><br />
 
                    <li>        
               <i class="fa-li fa fa-conference"></i>
-              <b class="text-primary" id="p9"> [9] 2018 arXiv. &nbsp; </b><br />
+              [9]&nbsp; <b class="text-primary" id="p9"> 2018 arXiv. &nbsp; </b><br />
               <b> Baihan Lin </b>, Nikolaus Kriegeskorte. <u><i> <a href="https://arxiv.org/abs/1810.02923">Adaptive Independence Tests with Geo-Topological Transformation. </a> </u></i>  </li><br />
 
                    <li>
                     <i class="fa-li fa fa-conference"></i>
-                    <b class="text-primary" id="p8"> [8] 2018 arXiv. &nbsp; </b><br />
+                    [8]&nbsp; <b class="text-primary" id="p8"> 2018 arXiv. &nbsp; </b><br />
               <b> Baihan Lin </b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <u><i> <a href="https://arxiv.org/abs/1802.00981">Adaptive Representation Selection in Contextual Bandit with Unlabeled History. </a> </u></i>  </li><br />
 
                    <li>
                     <i class="fa-li fa fa-conference"></i>
-                    <b class="text-primary" id="p7"> [7] 2018 IEEE ICDM Workshop. &nbsp; </b><br />
+                    [7]&nbsp; <b class="text-primary" id="p7"> 2018 IEEE ICDM Workshop. &nbsp; </b><br />
               <b> Baihan Lin </b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <u><i> <a href="https://arxiv.org/abs/1802.00981">Contextual Bandit with Adaptive Feature Extraction. </a> </u></i>  </li><br />
 
-                   <li><i class="fa-li fa fa-conference"></i>
-                   	<b class="text-primary" id="p6"> [6] 2017 RECOMB/ISCB Conference on Regulatory & Systems Genomics. &nbsp; </b><br />
+              <li><i class="fa-li fa fa-conference"></i>
+                   	[6] &nbsp;  <b class="text-primary" id="p6"> 2017 RECOMB/ISCB Conference on Regulatory & Systems Genomics. &nbsp; </b><br />
                Avinash Bukkittu, <b> Baihan Lin </b>,  Trung Vu, and Itsik Pe’er. <u><i> <a href="https://arxiv.org/abs/1711.04078">Parkinson’s disease digital biomarker discovery with optimized transitions and inferred markov emissions. </a> </u></i>  </li><br />
 
              <li>
               <i class="fa-li fa fa-journal"></i>
-              <b class="text-primary" id="p5"> [5] 2017 PLoS One. &nbsp; </b> <br />
+              [5] &nbsp;  <b class="text-primary" id="p5"> 2017 PLoS One. &nbsp; </b> <br />
                Yue Teng, Dehua Bi, Guigang Xie, Yuan Jin, Yong Huang, <b> Baihan Lin </b>, Xiaoping An, Dan Feng, and Yigang Tong. <u><i> <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0165085">Dynamic Forecasting of Zika Epidemics Using Google Trends. </a> </u></i> </li></li><br />
 
             <li>
               <i class="fa-li fa fa-journal"></i>
-              <b class="text-primary" id="p4"> [4] 2017 Journal of Infection. &nbsp; </b><br />
+              [4] &nbsp;  <b class="text-primary" id="p4"> 2017 Journal of Infection. &nbsp; </b><br />
                Yue Teng, Dehua Bi, Guigang Xie, Yuan Jin, Yong Huang, <b> Baihan Lin </b>, Xiaoping An, Yigang Tong, and Dan Feng. <u><i> <a href="https://www.sciencedirect.com/science/article/pii/S016344531730049X?via%3Dihub">Model-informed risk assessment for Zika virus outbreaks in the Asia-Pacific regions. </a> </u></i>  </li></li><br />
 
              <li>
               <i class="fa-li fa fa-journal"></i>
-              <b class="text-primary"  id="p3"> [3] 2017 Frontiers in cellular and infection microbiology. &nbsp; </b><br />
+              [3] &nbsp;  <b class="text-primary"  id="p3"> 2017 Frontiers in cellular and infection microbiology. &nbsp; </b><br />
                 Yue Teng, Shufeng Liu, Xiaocan Guo, Shuxia Liu, Yuan Jin, Tongtong He, Dehua Bi, Pei Zhang, <b> Baihan Lin </b>, Xiaoping An, Dan Feng, Zhiqiang Mi and Yigang Tong. <u><i> <a href="https://www.frontiersin.org/articles/10.3389/fcimb.2017.00327/full">An Integrative Analysis Reveals a Central Role of P53 Activation via MDM2 in Zika Virus Infection Induced Cell Death. </a> </u></i>  </li></li><br />
 
              <li>
                <i class="fa-li fa fa-conference"></i>
-               <b class="text-primary" id="p2"> [2] 2016 NeuroFutures Conference. &nbsp; </b><br />
+               [2] &nbsp; <b class="text-primary" id="p2"> 2016 NeuroFutures Conference. &nbsp; </b><br />
                <b> Baihan Lin </b>, Adrian K Andelin, Jaime F Olavarria. <u><i> <a href="https://dx.doi.org/10.13140/RG.2.1.1792.9847">Ocular Dominance Columns in Rat Visual Cortex: a Quantitative Model to Analyze Deprivation-Induced Cortical Plasticity. </a> </u></i>  </li></li><br />
 
             <li>
                <i class="fa-li fa fa-journal"></i>
-               <b class="text-primary" id="p1"> [1] 2015 Scientific Reports. &nbsp; </b><br />
+               [1] &nbsp; <b class="text-primary" id="p1"> 2015 Scientific Reports. &nbsp; </b><br />
                Yue Teng, Yuzhuo Wang, Xianglilan Zhang, Wenli Liu, Hang Fan, Hongwu Yao, <b> Baihan Lin </b>, Ping Zhu, Wenjun Yuan, Yigang Tong and Wuchun Cao. <u><i> <a href="https://www.nature.com/articles/srep09912">Systematic Genome-wide Screening and Prediction of microRNAs in EBOV During the 2014 Ebolavirus Outbreak. </a> </u></i>  </li></li><br />
 
           </ul>
