--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
              <li>
               <i class="fa-li fa fa-journal"></i>
-              [12] &nbsp;  <b class="text-primary" id="p12"> under review. &nbsp; </b> <br />
+              [12] &nbsp;  <b class="text-primary" id="p12"> 2019 Journal of the American Chemical Society. &nbsp; </b> <br />
                Zibo Chen, Matthew Johnson, Jiajun Chen, Matthew Bick, Scott Boyken, <b> Baihan Lin </b>, James DeYoreo, Justin Kollman, David Baker, and Frank DiMaio. <u><i> <a href="">Self-assembling 2d arrays with de novo protein building blocks. </a> </u></i> </li></li><br />
 
             <li>
