--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Baihan Lin's website">
+    <meta name="description" content="Baihan Lin's personal website">
     <meta name="author" content="Baihan Lin">
 
     <title>Baihan Lin</title>
@@ -23,8 +23,8 @@
 </head>
 
 <body id="indexpage">
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" id="sideNavSlim">
-        <h3 class="bottom-some"><a style="color:#ffffff;display:inline" href="index.html">Baihan Lin</a></h3>
+    <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" id="sideNav">
+        <h3 class="bottom-some"><a style="color:#ffffff;display:inline;text-transform:none;" href="#">Baihan Lin&nbsp;&nbsp;</a></h3>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -48,8 +48,9 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#"></a>
                 </li>
+                
 
-                <ul class="list-inline list-social-icons mb-0  top-some">
+                <ul class="list-inline list-social-icons mb-0 top-some">
 
                     <li class="list-adaptive-item">
                         <a href="https://www.linkedin.com/in/doerlbh/">
@@ -108,6 +109,49 @@
         </div>
     </nav>
 
+<nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" id="projNav">
+        <h3 class="bottom-some"><a style="color:#ffffff;display:inline;text-align:left;text-transform:none" href="#project">some cool projects I do</a></h3>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="proj/mentalRL">mental RL</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="proj/dynRSA"> dynamic RSA</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="proj/scTSA">topology</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="proj/neuralMDL">neural MDL</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="proj/tensegrity">tensegrity</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="proj/selfassembly">protein design</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="proj/pinocchio"> pinocchio VR</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="proj/osteoapp"> OsteoApp </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="proj/patch"> quanti patch </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#"></a>
+                </li>
+                
+            </ul>
+        </div>
+    </nav>
+
+
     <div class="container-fluid p-0">
 
         <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
@@ -122,11 +166,11 @@
                     </div>
 
                     <div class="contactcolumn">
-                        <h1 class="mb-0" style="display:inline">B</h1>
-                        <h2 style="font-size:75px;display:inline">aihan</h2>&nbsp;&nbsp;
-                        <span class="text-primary">
-          <h1 class="mb-0" style="display:inline"> L</h1><h2 class="mb-0" style="font-size:75px;display:inline">in</h2></span>
-                        <div class="subheading mb-5">Columbia University · New York, NY 10027 · (206) 915-1164 ·
+                        <h1 class="mb-0" style="display:inline;text-transform:none;">Baihan Lin</h1>
+                        <!-- <h2 style="font-size:75px;display:inline;">aihan</h2>&nbsp;&nbsp; -->
+                        <!-- <span class="text-primary"> -->
+          <!-- <h1 class="mb-0" style="display:inline"> L</h1><h2 class="mb-0" style="font-size:75px;display:inline">in</h2></span> -->
+                        <div class="subheading mb-5" style="text-transform:none">Columbia University · New York City · (206) 915-1164 ·
                             <a href="mailto:doerlbh@gmail.com">doerlbh@gmail.com</a>
                         </div>
                     </div>
