--- a/bits/index.html
+++ b/bits/index.html
@@ -5,31 +5,26 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Baihan Lin's website">
+    <meta name="description" content="Baihan Lin's personal website">
     <meta name="author" content="Baihan Lin">
 
     <title>Baihan Lin</title>
 
+
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
-    <link href="../css/bootstrap.css" rel="stylesheet">
-    <link href="../css/resume.css" rel="stylesheet">
-    <link href="../css/font-awesome.css" rel="stylesheet">
-    <link href="../css/devicons.css" rel="stylesheet">
-    <link href="../css/simple-line-icons.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/resume.css" rel="stylesheet">
+    <link href="css/font-awesome.css" rel="stylesheet">
+    <link href="css/devicons.css" rel="stylesheet">
+    <link href="css/simple-line-icons.css" rel="stylesheet">
 
 </head>
 
-<body id="lifepage">
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" id="sideNavSlim">
-        <h3 class="bottom-some"><a style="color:#ffffff;display:inline" href="../">Baihan Lin</a></h3>
-        <!--     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Baihan Lin</span>
-      <span class="d-none d-lg-block">
-        <br><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profiles/profile500.jpg" alt="" class="photo">
-      </span>
-    </a> -->
+<body id="indexpage">
+    <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" id="sideNav">
+        <h3 class="bottom-some"><a style="color:#ffffff;display:inline;text-transform:none;" href="../#">Baihan Lin&nbsp;&nbsp;</a></h3>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -53,6 +48,7 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#"></a>
                 </li>
+                
 
                 <ul class="list-inline list-social-icons mb-0 top-some">
 
@@ -112,6 +108,50 @@
             </ul>
         </div>
     </nav>
+
+<nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" id="projNav">
+        <h3 class="bottom-some"><a style="color:#ffffff;display:inline;text-align:left;text-transform:none" href="#project">some cool projects I do</a></h3>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="../proj/mentalRL">mental RL</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="../proj/dynRSA"> dynamic RSA</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="../proj/scTSA">topology</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="../proj/neuralMDL">neural MDL</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="../proj/tensegrity">tensegrity</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="../proj/selfassembly">protein design</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="../proj/pinocchio"> pinocchio VR</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="../proj/osteoapp"> OsteoApp </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="../proj/patch"> quanti patch </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#"></a>
+                </li>
+                
+            </ul>
+        </div>
+    </nav>
+
+
 
     <div class="container-fluid p-0">
 
