--- a/index.html
+++ b/index.html
@@ -155,11 +155,42 @@
                     </div>
                 </div>
                 <p class="mb-5 text-primary">
-                    I am a Ph.D. candidate at <a href="https://ctn.zuckermaninstitute.columbia.edu/"><u>Center for Theoretical Neuroscience</u></a> and <a href="https://zuckermaninstitute.columbia.edu/"><u>Zuckerman Mind Brain Behavior Institute</u></a> in Columbia University, co-advised by <a href="https://zuckermaninstitute.columbia.edu/nikolaus-kriegeskorte-phd"><u>Prof. Nikolaus Kriegeskorte</u></a> and <a href="https://zuckermaninstitute.columbia.edu/ning-qian-phd"><u>Prof. Ning Qian</u></a>. I am interested in a variety of stuff ranging from geometric topology and dynamical systems to Bayesian statistics and machine learning, as well as their applications to neuroscience, genomics, and cognitive sciences. Most recently, I am developing neuroscience-inspired AI systems and applying ML to understand human brains (Neuro &harr; AI). 
+                    I am a Ph.D. candidate in Computational Neuroscience at <a href="https://ctn.zuckermaninstitute.columbia.edu/"><u>Center for Theoretical Neuroscience</u></a> and <a href="https://zuckermaninstitute.columbia.edu/"><u>Zuckerman Mind Brain Behavior Institute</u></a> in Columbia University, with <a href="https://zuckermaninstitute.columbia.edu/nikolaus-kriegeskorte-phd"><u>Prof. Niko Kriegeskorte</u></a> and <a href="https://zuckermaninstitute.columbia.edu/ning-qian-phd"><u>Prof. Ning Qian</u></a>. I develop neuroscience-inspired AI systems and apply ML to understand human brains (Neuro &harr; AI).
+                    <!-- I am interested in a variety of stuff ranging from geometric topology and dynamical systems to Bayesian statistics and machine learning, as well as their applications to neuroscience, genomics, and cognitive sciences. Most recently, I am developing neuroscience-inspired AI systems and applying ML to understand human brains (Neuro &harr; AI).  -->
                 </p>
                 <p class="mb-5 text-primary">
                     I graduated from the University of Washington, Seattle (UW), as part of the NIH-funded Computational Neuroscience Training Program, with B.S. in Applied & Computational Mathematics and B.A. in Psychology with Honors. I still maintain close collaborations and affliations with <a href="https://systemsbiology.columbia.edu/people/baihan-lin"><u>Columbia Department of Systems Biology</u></a> and <a href="https://amath.washington.edu/people/baihan-lin"><u>UW Department of Applied Mathematics</u></a>.
                 </p>
+
+                <p class="mb-5 text-primary">
+                    I am into <br/>
+                    <span class="field">
+                        <img src="./img/fields/brain.png" alt="" style="width:80%"><br/>
+                        brain
+                    </span>
+                    <span class="field">
+                        <img src="./img/fields/robot.png" alt="" style="width:80%"><br/>
+                        intelligence
+                    </span>                    
+                    <span class="field">
+                        <img src="./img/fields/topology.png" alt="" style="width:80%"><br/>
+                        topology
+                    </span>
+                    <span class="field">
+                        <img src="./img/fields/psych.png" alt="" style="width:80%"><br/>
+                        psychology
+                    </span>
+                    <span class="field">
+                        <img src="./img/fields/design.png" alt="" style="width:80%"><br/>
+                        design
+                    </span>
+                    <span class="field">
+                        <img src="./img/fields/art.png" alt="" style="width:80%"><br/>
+                        perception
+                    </span>
+                </p>
+
+
                 <!-- 
                     <div class="subheading mb-3">Recent news</div>
                     <ul class="fa-ul mb-0">
