--- a/index.html
+++ b/index.html
@@ -726,5 +726,6 @@
         
         <div class="flier"><img src="img/random/doge.png" alt="" style="width:300px;height:400px;"></div>
          -->
+     <footer style="align:center;">&copy; Copyright 2016<script>new Date().getFullYear()>2016&&document.write("-"+new Date().getFullYear());</script> by Baihan Lin</footer>
 </html>
 
